--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-# purple29th.github.io
-Project Website
+<!-- # purple29th.github.io
+Project Website -->
+<a href="./project1/Project1-Resume/resume.html">Link1</a>
