--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!-- # purple29th.github.io
 Project Website -->
 <a href="./project1/Project1-Resume/resume.html">Link1</a>
+<a href="./project2/Project2-Resume/resume.html">Link2</a>
