--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 Project Website -->
 <a href="./project1/Project1-Resume/resume.html">Link1</a>
 <a href="./project2/Project2-Resume/resume.html">Link2</a>
+<a href="./project3/index.html">Link3</a>
