index html chages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
-<!-- # purple29th.github.io
-Project Website -->
-<a href="./project1/Project1-Resume/resume.html">Link1</a>
-<a href="./project2/Project2-Resume/resume.html">Link2</a>
-<a href="./project3/index.html">Link3</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Projects</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            color: #6a0dad;
+            margin-bottom: 20px;
+        }
+        .project-link {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #6a0dad;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .project-link:hover {
+            background-color: #4b007d;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My Projects</h1>
+    <p>Explore my projects below:</p>
+    <a href="./project1/Project1-Resume/resume.html" class="project-link">Project 1</a>
+    <a href="./project2/Project2-Resume/resume.html" class="project-link">Project 2</a>
+    <a href="./project3/index.html" class="project-link">Project 3</a>
+</body>
+</html>
