--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         .project-link:hover {
             background-color: #4b007d;
         }
+        footer {
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
@@ -34,5 +37,8 @@
     <a href="./project1/Project1-Resume/resume.html" class="project-link">Project 1</a>
     <a href="./project2/Project2-Resume/resume.html" class="project-link">Project 2</a>
     <a href="./project3/index.html" class="project-link">Project 3</a>
+    <footer>
+        <p>Course: CSC 139 01 | Professor: Dr. Hong Jiang | Creator: Tosin Jimoh</p>
+    </footer>
 </body>
 </html>
